finished designing portfolio

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>About</title>
         <link rel = "stylesheet" type = "text/css" href = "style.css"\>
+        <link rel = "stylesheet" type = "text/css" href = "stylePortfolio.css"\>
     </head>
     <body>
         <header>
@@ -19,13 +20,11 @@
 
         <div id="about">
             <h2 id="aboutme">About Me</h2>
-            <p><img id=aboutMeImage src="assets/images/me.jpg" width = 200px height = 175px align="left"/>My name is Steven Peng. I was studying to become an engineer, but life's path led me to studying
+            <p id="paragraph"><img id=aboutMeImage src="assets/images/me.jpg" width = 200px height = 175px align="left"/>My name is Steven Peng. I was studying to become an engineer, but life's path led me to studying
                 web development at George Washington University's coding bootcamp. Aside from what I do career wise, 
                 some of what I love to do are playing basketball, table tennis, and going swimming. 
             </p>
         </div>
-
-
 
         <footer>
             <section></section>
