--- a/portfolio.html
+++ b/portfolio.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <title>About</title>
+        <link rel = "stylesheet" type = "text/css" href = "stylePortfolio.css"\>
         <link rel = "stylesheet" type = "text/css" href = "style.css"\>
     </head>
     <body>
         <header>
-            <div>
+            <div id="name">
                 <h2>Steven Peng</h2>
             </div>
 
@@ -17,19 +18,30 @@
             </nav>
         </header>
 
-        <div>
-            <h2>About Me</h2>
-            <p>My name is Steven Peng. I was studying to become an engineer, but life's path led me to studying
-                web development at George Washington University's coding bootcamp. Aside from what I do career wise, 
-                some of what I love to do are playing basketball, table tennis, and going swimming. 
-            </p>
+        <div id="aboutportfolio">
+            <h2 id="portfolio">Portfolio</h2>
+
+            <div id="hangman">
+                <p id="hangmanword">Hangman</p> <img class="hangman" src="assets/images/hangman.jpg" width = 300px height = 300px/>
+            </div>
+            <div id="rpg">
+                <p id="rpgword">RPG Game</p> <img class="rpg" src="assets/images/rpggame.jpg" width = 300px height = 300px/>
+            </div>
+            <div id="trivia">
+                <p id="triviaword"> Trivia Game </p> <img class="trivia" src="assets/images/trivia_game.jpg" width = 200px height = 200px/>
+            </div>
+            <div id="rutgers">
+                <p id="rutgersword">Rutgers Info Widget</p> <img class="rutgers" src="assets/images/rutgers_info_widget.jpg" width = 200px height = 200px/>
+            </div>
+            <div id="rock">
+                <p id="rockword">Rock Paper Scissors</p> <img class="rock" src="assets/images/rock_paper_scissors.jpg" width = 200px height = 200px/>
+            </div>
+            
         </div>
 
-
-
         <footer>
-            <div></div>
-            Copyright 2018
+            <section></section>
+            <h6>Copyright 2018</h6>
         </footer>
     </body>
 </html>
