--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,14 @@
 <html>
     <head>
         <title>About</title>
+        <link rel = "stylesheet" type = "text/css" href = "style.css"\>
+        <link rel = "stylesheet" type = "text/css" href = "stylePortfolio.css"\>
+        
     </head>
     <body>
         <header>
-            <div>
-                <h1>Steven Peng</h1>
+            <div id="name">
+                <h2>Steven Peng</h2>
             </div>
 
             <nav>
@@ -16,12 +19,38 @@
             </nav>
         </header>
 
+        <div id="about">
+            <h2 id="contact2">Contact</h2>
+
+            <div class= col-md-6>
+                <label>Name</label>
+                <br/>
+                <input required type = "text" id="nameFillOut" />
+                <br/><br/>
+            </div>
+
+            <div class= col-md-6>
+                <label>Email</label>
+                <br/>
+                <input required type = "email" id="email" />
+                <br/><br/>
+            </div>
+
+            <div class= col-md-6>
+                <label>Message</label>
+                <br/>
+                <textarea id = "message" ></textarea>
+                <br/><br/>
+            </div>
+
+            <button class="submitButton">SUBMIT</button>
 
 
+        </div>
 
         <footer>
-            <div></div>
-            Copyright 2018
+            <section></section>
+            <h6>Copyright 2018</h6>
         </footer>
     </body>
 </html>
